<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/common_padding_middle"
        android:layout_marginEnd="@dimen/common_padding_middle"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLoginLogo"
            android:layout_width="@dimen/card_img_size_width"
            android:layout_height="@dimen/card_img_cover_height"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFlUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:helperText="@string/required_ed"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtUsername" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_lenght_password"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            app:helperText="@string/required_ed"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtPassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_min"
            android:background="@drawable/button_rounded"
            android:text="@string/login_btn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_padding_default">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtVwLoginUser" />

            <TextView
                android:id="@+id/txtVwSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding_min"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/txtVwLoginUser2"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/loading"
            android:layout_marginTop="@dimen/common_padding_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
