<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgRegisterLogo"
                android:layout_width="@dimen/card_img_size_register_width"
                android:layout_height="@dimen/card_img_size_register_width"
                android:layout_gravity="center"
                android:importantForAccessibility="no" />

            <!--TODO MEJORAR TEXTAPPAREANCE-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/common_padding_middle"
                android:text="Register"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtName"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtSurname"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtLastName"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFlRegisterUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            app:endIconMode="clear_text"
            app:helperText="@string/required_ed"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtUsername" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_lenght_password"
            app:endIconMode="password_toggle"
            app:helperText="@string/required_ed"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtPassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            app:helperText="@string/required_ed"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtEmail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            app:startIconDrawable="@drawable/ic_local_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtPhone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_min"
            android:background="@drawable/button_rounded"
            android:text="@string/register_btn" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>